--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
-    "python.formatting.provider": "black",
+    "python.formatting.provider": "yapf",
+    "python.linting.flake8Enabled": true,
     "editor.formatOnPaste": true,
     "editor.formatOnType": true,
     "editor.formatOnSave": true
