--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ AOJ/.vscode/settings.json
 AOJ/ALDS1/.vscode/settings.json
 AOJ/ALDS1/.vscode/settings.json
 WIP/.vscode/settings.json
+settings.json
