--- a/AOJ/ALDS1/.vscode/settings.json
+++ b/AOJ/ALDS1/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\sennu\\AppData\\Local\\Programs\\Python\\Python38-32\\python.exe"
+    "python.pythonPath": "C:\\Users\\zhu2q\\AppData\\Local\\Programs\\Python\\Python39\\python.exe"
 }
