--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ AOJ/ALDS1/.vscode/settings.json
 AOJ/ALDS1/.vscode/settings.json
 WIP/.vscode/settings.json
 settings.json
+AOJ/ALDS1/.vscode/settings.json
