遊んでみた

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ AOJ/ALDS1/.vscode/settings.json
 WIP/.vscode/settings.json
 settings.json
 AOJ/ALDS1/.vscode/settings.json
+API/tutorial/src/__pycache__
